--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "populate": "node src/db/populate.js",
     "build": "tsc",
     "dev": "bun run src/index.ts",
     "start": "node dist/app.js"
