--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eslint/js": "^9.37.0",
     "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
+    "@types/connect-flash": "^0.0.40",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
@@ -40,6 +41,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "3.0.2",
+    "connect-flash": "0.1.1",
     "connect-pg-simple": "10.0.0",
     "dotenv": "^17.2.3",
     "ejs": "3.1.10",
