feat: add delete message just for admins

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
+    "@types/method-override": "^3.0.0",
     "@types/node": "^24.8.0",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
@@ -47,6 +48,7 @@
     "ejs": "3.1.10",
     "express": "5.1.0",
     "express-session": "1.18.2",
+    "method-override": "3.0.0",
     "passport": "0.7.0",
     "passport-local": "1.0.0",
     "pg": "8.16.3",
